cmake_minimum_required(VERSION 3.17)
project(DP_GFG)

set(CMAKE_CXX_STANDARD 20)

add_executable(DP_GFG main.cpp "332. Coin Change/top-down-memoization.cpp" "332. Coin Change/bottom-up-tabulation.cpp" "139. Word Break/bottom-up.cpp" "17. Letter Combinations of a Phone Number/backtrack.cpp" "22. Generate Parentheses/backtrack.cpp" "all_headers.h" "91. Decode Ways/bottom_up.cpp" "174. Dungeon Game/bottom_up.cpp" "140. Word Break II/bottom_up.cpp" "140. Word Break II/bottom_up.h" "1641. Count Sorted Vowel Strings/backtrack.cpp" "1641. Count Sorted Vowel Strings/backtrack.h" "416. Partition Equal Subset Sum/bottom_up.h" ankit/three.h ankit/two.h "300. Longest Increasing Subsequence/bottom_up.h" "494. Target Sum/bottom-up.h" "282. Expression Add Operators/top-down.h" "51. N-Queens/backtrack.h" "51. N-Queens/backtrack.h" "518. Coin Change 2/bottom-up.h" "377. Combination Sum IV/bottom-up.h" "221. Maximal Square/bottom-up.h" "84. Largest Rectangle in Histogram/left-right-scan.h" "85. Maximal Rectangle/left-right-scan.h")